fix timeline collapsing mechanism

--- a/app/assets/stylesheets/content/work_packages/_table_hierarchy.sass
+++ b/app/assets/stylesheets/content/work_packages/_table_hierarchy.sass
@@ -100,3 +100,7 @@ body:not(.accessibility-mode ) .wp-table--hierarchy-aditional-row
     display: block !important
     top: 24px
     position: absolute
+
+.collapsed-timeline-chart
+  .collapsed-timeline-chart
+    top: 0px !important
